@@ -81,6 +81,9 @@ static bool s_useNewIceSfx = false;
 static int g_errorsSfx = 0;
 // static int g_errorsMusic = 0; // Unued yet
 
+static bool s_musicHasYoshiMode = false;
+static int  s_musicYoshiTrackNumber = -1;
+
 static std::string MusicRoot;
 static std::string SfxRoot;
 
@@ -92,6 +95,7 @@ struct Music_t
 {
     std::string path;
     int volume = 52;
+    int yoshiModeTrack = -1;
 };
 
 struct SFX_t
@@ -165,6 +169,7 @@ static void AddMusic(const std::string &root,
     {
         Music_t m;
         m.path = root + f;
+        ini.read("yoshi-mode-track", m.yoshiModeTrack, -1);
         m.volume = volume;
         pLogDebug("Adding music [%s] '%s'", alias.c_str(), m.path.c_str());
         auto a = music.find(alias);
@@ -299,12 +304,27 @@ void SoundResumeAll()
 
 static void processPathArgs(std::string &path,
                             const std::string &episodeRoot,
-                            const std::string &dataDirName)
+                            const std::string &dataDirName,
+                            int *yoshiModeTrack = nullptr)
 {
     if(path.find('|') == std::string::npos)
         return; // Nothing to do
     Strings::List p;
     Strings::split(p, path, '|');
+
+    if(yoshiModeTrack)
+    {
+        *yoshiModeTrack = -1;
+        Strings::List args;
+        Strings::split(args, p[1], ';');
+        for(auto &arg : args)
+        {
+            if(arg.compare(0, 3, "ym=") != 0)
+                continue;
+            *yoshiModeTrack = SDL_atoi(arg.substr(3).c_str());
+        }
+    }
+
     Strings::replaceInAll(p[1], "{e}", episodeRoot);
     Strings::replaceInAll(p[1], "{d}", episodeRoot + dataDirName);
     Strings::replaceInAll(p[1], "{r}", MusicRoot);
@@ -800,4 +820,17 @@ void UnloadCustomSound()
     restoreDefaultSfx();
     g_customMusicInDataFolder = false;
     g_customSoundsInDataFolder = false;
+}
+
+void UpdateYoshiMusic()
+{
+    if(!s_musicHasYoshiMode)
+        return;
+
+    bool hasYoshi = false;
+
+    for(int i = 1; i <= maxPlayers; ++i)
+        hasYoshi |= (Player[i].Mount == 3);
+
+    Mix_SetMusicTrackMute(g_curMusic, s_musicYoshiTrackNumber, hasYoshi ? 0 : 1);
 }
